# network-threat-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  app.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: tests.yml
agents/: __init__.py  anomaly_detector.py  feature_extractor.py  live_capture.py  log_parser.py  mock_data.py  orchestrator.py  pcap_parser.py  rule_engine.py  threat_classifier.py
data/: generate_samples.py  sample_capture.pcap
models/: __init__.py  network.py  reports.py  threats.py
rules/: __init__.py  brute_force.py  ddos.py  dns_tunneling.py  port_scan.py  suspicious_connections.py
tests/: conftest.py  test_anomaly_detector.py  test_app.py  test_cli.py  test_dns_tunneling.py  test_feature_extractor.py  test_live_capture.py  test_log_parser.py  test_models.py  test_pcap_parser.py  test_pdf_report_generator.py  test_report_generator.py  test_rule_engine.py  test_threat_classifier.py  test_visualization.py
utils/: pdf_report_generator.py  report_generator.py  visualization.py
