[project]
name = "network-threat-analyzer"
version = "1.1.0"
description = "Multi-agent network threat detection combining rule-based signatures with ML anomaly detection"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5.0",
    "scikit-learn>=1.5.0",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "matplotlib>=3.11.0",
    "streamlit>=1.60.0",
    "python-docx>=1.1.0",
    "fpdf2>=2.8.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "pytest-cov>=5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501: line length is handled by the formatter
# B008: FastAPI's Depends()/File() default-argument idiom is intentional
ignore = ["E501", "B008"]
